--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "require": {
         "ext-zip": "*",
         "php": "^7.3|^8.0",
-        "pionect/daalder": "^11|^12|^13|dev-acceptance",
-        "rahul900day/laravel-console-spinner": "^1.0"
+        "pionect/daalder": "^11|^12|^13|dev-acceptance"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
