[TEST] Custom github action

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -82,3 +82,11 @@ jobs:
                     BASE_URL: https://slack.com/api/chat.postMessage
                     CHANNEL: programmers
                 if: always() # Pick up events when the job fails or is canceled
+
+
+            -   id: foo
+                uses: actions/hello-world-composite-action@v1
+                with:
+                    who-to-greet: 'Mona the Octocat'
+            -   run: echo random-number ${{ steps.foo.outputs.random-number }}
+                shell: bash
