[FIX] GITHUB_TOKEN
Co-Authored-By: Vincent van Hoven <11269255+vincentvanhoven@users.noreply.github.com>

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,8 +21,8 @@ jobs:
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
         steps:
             -   id: foo
-                uses: Daalder/run-tests-action@1.1.0
+                uses: Daalder/run-tests-action@1.1.1
                 env:
-                    COMPOSER_TOKEN: ${{ env.GITHUB_TOKEN }}
+                    GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
                     PACKAGIST_TOKEN: ${{ secrets.DAALDER }}
                     SLACK_BEARER_TOKEN: ${{ secrets.SLACK_BEARER_TOKEN }}
