[ATTEMPT] Fix GITHUB_TOKEN
Co-Authored-By: Vincent van Hoven <11269255+vincentvanhoven@users.noreply.github.com>

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,6 +23,6 @@ jobs:
             -   id: foo
                 uses: Daalder/run-tests-action@1.2.0
                 env:
-                    GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+                    GITHUB_TOKEN: ${{ github.token }}
                     PACKAGIST_TOKEN: ${{ secrets.DAALDER }}
                     SLACK_BEARER_TOKEN: ${{ secrets.SLACK_BEARER_TOKEN }}
