--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "ext-zip": "*",
         "php": "^7.4|^8.0",
-        "pionect/daalder": "^11|^12|^13|dev-acceptance|dev-master"
+        "pionect/daalder": "^11|^12|^13|dev-acceptance|dev-master|dev-develop"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
