--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Daalder\\Feeds\\": "src/"
+            "Daalder\\Feeds\\": "src/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
