--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "ext-zip": "*",
         "php": "^8.0",
-        "pionect/daalder": "^19|dev-acceptance|dev-master|dev-develop"
+        "pionect/daalder": "^19|dev-acceptance|dev-master|dev-develop|dev-DAN-210-upgrade-to-laravel-9"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
