--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "ext-zip": "*",
         "php": "^8.0",
-        "pionect/daalder": "^19|^20|dev-acceptance|dev-master|dev-develop|dev-DAN-210-upgrade-to-laravel-9"
+        "pionect/daalder": "^19|^20|dev-acceptance|dev-master|dev-develop|dev-DAN-210-upgrade-to-laravel-9|dev-DAN-267-refactor-api-authentication"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
