--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,17 +12,28 @@ jobs:
             matrix:
                 os: [ubuntu-latest]
                 php: [8.0]
-                laravel: [8.*]
+                laravel: [9.*]
                 dependency-version: [prefer-stable]
-                include:
-                    -   laravel: 8.*
-                        testbench: 6.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
         steps:
-            -   id: foo
-                uses: Daalder/run-tests-action@1.2.4
-                env:
-                    GITHUB_TOKEN: ${{ github.token }}
-                    PACKAGIST_TOKEN: ${{ secrets.DAALDER }}
-                    SLACK_BEARER_TOKEN: ${{ secrets.SLACK_BEARER_TOKEN }}
+            - id: foo
+              uses: Daalder/run-tests-action@1.3.5
+              env:
+                  PACKAGIST_TOKEN: ${{ secrets.DAALDER }}
+    slack_notification:
+        needs: [tests]
+        if: always()
+        runs-on: ubuntu-latest
+        steps:
+            - name: Run Slack Notification
+              uses: rohammosalli/slack-action@master
+              env:
+                  SLACK_BOT_TOKEN: ${{ secrets.SLACK_BEARER_TOKEN }}
+                  SLACK_CHANNEL: "pipelines-notifications"
+                  GITHUB_TOKEN: ${{ github.token }}
+                  GITHUB_RUN_ID: ${{ github.run_id }}
+                  REPO_OWNER: ${{ github.repository_owner }}
+                  REPO_NAME: ${{ github.event.repository.name }}
+                  RUN_ID: ${{ github.run_id }}
+                  SEND_SUCCESS_MESSAGE: "true"
