[ATTEMPT] Fix pipelines (WIP)
Co-Authored-By: Vincent van Hoven <11269255+vincentvanhoven@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,10 @@
               "Daalder\\Feeds\\FeedsServiceProvider"
             ]
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
