--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "ext-zip": "*",
-        "php": "8.2",
+        "php": "8.2.*",
         "pionect/daalder": "^22|dev-acceptance|dev-master|dev-develop|dev-DAN-267-refactor-api-authentication"
     },
     "require-dev": {
